--- a/src/app/missions/mission-active.component.html
+++ b/src/app/missions/mission-active.component.html
@@ -70,7 +70,7 @@
 
 
 
-<section *ngIf="!mission.isActive && expenses">
+<section *ngIf="!mission.isActive">
     <h2 style="margin-top: 2em; border-bottom: 2px solid #acacac">
         Registrerte utgifter for deltakere
     </h2>
