--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 <div id="wrapper">
     <header id="top" *ngIf="user">
         <div class="container">
-            <a class="col-xs-6 col-md-2" [routerLink]="['/missions']" id="logo"><img src="app/assets/img/logo.svg"></a>
+            <a class="col-xs-6 col-md-2" [routerLink]="['/missions']" id="logo"><img src="assets/img/logo.svg"></a>
             <div class="col-xs-6 col-md-10">
                 <button id="menu-toggle" (click)="toggleMobileMenu()">&#8801; Meny </button>
                 <ul id="menu" class="animated fadeInDown" [class.show]="showMobileMenu">
