--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -71,8 +71,7 @@ body { background:#f7f7f7; font-family: 'Open Sans', sans-serif;}
 
 /* top */
 #top { background: #f1f2f3; height: 100px;}
-#logo { display: block; float: left; padding:2em 0; }
-#logo > img { width: 150px;}
+#logo { display: block; float: left; padding:2em 0;}
 .maske { background-color: rgba(255,255,255, 0.85); left: 0; bottom: 0; right: 0; top: 0; margin: auto; overflow-y: scroll; position: fixed; z-index: 10; }
 #menymaske, #loadingmask { display: none;}
 
@@ -103,11 +102,19 @@ h1 { border-bottom: 2px solid #acacac;}
 
 #content { padding-top: 4em; margin-bottom: 10em;}
 
+/* app */
+
+html {
+    width:100%;
+    height:100%;
+    background:url(img/sar-status-text.svg) center center no-repeat;
+}
+
 
 /* login */
 
 #login-box { background: #fff; padding: 3em; border-radius: 3px; width: 450px; margin: 5em auto; text-align:center;}
-#login-box img { width: 50%; height: auto; margin: 3em 0;}
+#login-box img { width: auto; height: auto; margin: 3em 0;}
 #login-box form { text-align: left;}
 #login-box button { width: 100%;}
 
