--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -71,8 +71,7 @@ body { background:#f7f7f7; font-family: 'Open Sans', sans-serif;}
 
 /* top */
 #top { background: #f1f2f3; height: 100px;}
-#splash { display: block; float: left; }
-#logo { display: block; float: left; padding: 2em 0; height: 200% }
+#logo { display: block; float: left; padding: 2em 0; width: 75%; height: 75%}
 .maske { background-color: rgba(255,255,255, 0.85); left: 0; bottom: 0; right: 0; top: 0; margin: auto; overflow-y: scroll; position: fixed; z-index: 10; }
 #menymaske, #loadingmask { display: none;}
 
@@ -109,6 +108,7 @@ html {
     width:100%;
     height:100%;
     background:url(img/sar-status-text.svg) center center no-repeat;
+    background-size: 20em;
 }
 
 
